# scoop-auto-updater

./: CMakeLists.txt  README.md  app.manifest  resource.h  scoop_auto_updater.cpp  scoop_auto_updater.rc
res/: app.manifest  app.rc  resource.h
src/: app.cpp  app.h  common.h  winmain.cpp
src/ui/: general.cpp  pages.h  policy.cpp  settings.cpp
